@@ -22,6 +22,7 @@ webport = ""
 websecret = ""
 secret = "secret"
 lang = "en"
+encoding = "iso-8859-1"
 icqServer = "login.icq.com"
 icqPort = "5238"
 sessionGreeting = ""
